--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,5 +1,28 @@
 <html>
-<title>This is title.</title>
-<head> web-page</head>
-<h1><p>This is paragraph.</p></h1>
+<head>
+<title>article-one|Diksha Thakre</title>
+ </head>
+<body>
+<div>
+    <a href="/">Home</a>
+</div>
+<br/>
+<h3>
+    Article one
+</h3>
+<div>
+    Aug 14,2017
+</div>
+<div>
+    <p>
+        This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.
+    </p>
+    <p>
+        This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.
+    </p>
+    <p>
+        This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.
+    </p>
+</div>
+</body>
 </html>
