--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -2,19 +2,28 @@
 <head>
 <title>article-one|Diksha Thakre</title>
 <meta name="viewport" content="width=device-width,initial-scale=1" />
+<style>
+ .container{
+     max-width: 800px;
+     margin: 0 auto;
+     color: grey;
+     font-family: sans-serif;
+ }   
+</style>
  </head>
 <body>
-<div>
+<div class="container">
+    <div>
     <a href="/">Home</a>
-</div>
-<br/>
-<h3>
+  </div>
+  <br/>
+  <h3>
     Article one
-</h3>
-<div>
+  </h3>
+ <div>
     Aug 14,2017
-</div>
-<div>
+ </div>
+  <div>
     <p>
         This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.
     </p>
@@ -24,6 +33,7 @@
     <p>
         This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.
     </p>
+ </div>
 </div>
 </body>
 </html>
