--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -2,8 +2,20 @@
 <head>
 <title>article-two|Diksha Thakre</title>
 <meta name="viewport" content="width=device-width,initial-scale=1" />
+ <style>
+ .container{
+    max-width: 800px;
+    margin: 0 auto;
+    color: #7b1c1c;
+    font-family: sans-serif;
+    padding-top: 60px;
+    padding-left: 20px;
+    padding-right: 20px;
+ }   
+</style>
  </head>
 <body>
+<div class="container">
 <div>
     <a href="/">Home</a>
 </div>
@@ -27,6 +39,7 @@
         This is the content for my second article.This is the content for my second article.This is the content for my second article.
         This is the content for my second article. This is the content for my second article.
     </p>
+</div>
 </div>
 </body>
 </html>
