[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,7 @@
             Hi! I am Diksha Thakre.This is my first WebApp.
         </div>
         <script>
-            alert('HI,I\'m javascript!');
+            alert('HI,I\'m Javascript!');
         </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
