[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,18 +4,26 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+        <div class="container">
         <div class="center">
-            <img id='madi' src="/ui/madi.png" class="img-medium"/>
+            <img id='madi' src="https://pbs.twimg.com/profile_images/890644406218379266/0-MQ6qtP_400x400.jpg" class="img-medium"/>
         </div>
+        <hr/>
         <br>
-        <div id='main-text' class="center text-big bold">
-            Hi! I am Diksha Thakre.This is my first WebApp.
+        <h3>Personal</h3>
+        <div>
+            Hi,I am Diksha Thakre.
         </div>
-        <script>
-            alert('HI,I\'m Javascript!');
-        </script>
+        <hr/>
+       <h3>Professional</h3>
+        <div>
+            I am a student.
+        </div>
+        <hr/>
+        <div class="footer"></div>
        
-       <script type="text/javascript" src="/ui/main.js">
+    </div>
+         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
 </html>
