--- a/ui/index.html
+++ b/ui/index.html
@@ -20,7 +20,9 @@
             I am a student.
         </div>
         <hr/>
-        <div class="footer"></div>
+        <div class="footer">
+            This Button<button id="counter">Click me!</button> has been clicked<span id="count">0</span>times.
+        </div>
        
     </div>
          <script type="text/javascript" src="/ui/main.js">
